# classic-ai

./: .gitignore  LICENSE.md  README.md  anki_deck.txt  cspell.json  mise.toml  pyproject.toml
.binder/: Dockerfile
.cursor/: mcp.json
.cursor/plans/: utn_book_migration_4206c4bf.plan.md
.cursor/skills/grilling/: SKILL.md
.github/workflows/: ci.yml  pages.yml
book/: bibliography.bib  myst.yml
book/chapters/: welcome.md
book/chapters/unit-01-introduccion/: 01-espacio-de-busqueda-y-descripcion-formal-de-problemas.md  02-analisis-del-problema.md  03-problemas-ignorables-recuperables-y-no-recuperables.md  04-problemas-con-consecuencia-cierta-e-incierta.md  05-solucion-absoluta-o-relativa.md  06-solucion-como-estado-o-como-ruta.md  07-papel-del-conocimiento-en-la-busqueda.md  08-problemas-solitarios-y-conversacionales.md  09-busqueda-y.md  exam-preparation.md  repaso.md
book/chapters/unit-02-busqueda-y-planificacion/: 01-explosion-combinatoria-y-ramificacion-y-acotacion.md  02-busqueda-primero-en-anchura.md  03-busqueda-primero-en-profundidad.md  04-tecnicas-de-busqueda-heuristica.md  05-generacion-y-prueba.md  06-escalada-o-remonte-de-colinas.md  07-problemas-tipicos-de-escalada.md  08-busqueda-el-primero-mejor.md  09-reduccion-de-problemas.md  10-verificacion-de-restricciones.md  11-analisis-de-medios-y-fines.md  12-busqueda-en-problemas-de-juegos.md  13-juegos-de-dos-jugadores.md  14-minimax.md  15-alfa-beta.md  16-representacion-del-conocimiento.md  exam-preparation.md  repaso.md
book/chapters/unit-03-representacion-conocimiento/: 01-naturaleza-del-argumento.md  02-verdad-y-validez-de-argumentos.md  03-logica-simbolica-y-enunciados.md  04-formas-de-argumentos-y-tablas-de-verdad.md  05-prueba-formal-de-validez.md  06-reglas-de-inferencia-y-reemplazo.md  07-demostracion-de-invalidez.md  08-logica-de-predicados.md  09-razonamiento-bajo-incertidumbre.md  10-factores-de-certeza.md  11-estructuras-de-ranura-y-relleno-debiles.md  12-estructuras-de-ranura-y-relleno-fuertes.md  exam-preparation.md  repaso.md
book/chapters/unit-04-ingenieria-conocimiento/: exam-preparation.md  repaso.md  unit-04.md
book/chapters/unit-05-redes-neuronales/: exam-preparation.md  repaso.md  unit-05.md
book/chapters/unit-06-prolog/: 01-capitulo-1-introduccion.md  02-capitulo-2-relacion-con-la-logica.md  03-capitulo-3-manipulacion-de-datos.md  04-capitulo-4-estructuras-de-datos.md  05-capitulo-5-base-de-datos-y-functores.md  exam-bank.md  practica-01.md  practica-02.md  practica-03.md  practica-04.md  unit-06.md
book/data/: flashcards.json
book/plugins/: ethicalads.mjs  flashcards-widget.mjs  flashcards.mjs
scripts/: check_chapter_links.py  check_prolog_cells.py  generate_repaso_flashcards.py  install_prolog_kernel.py
scripts/generate_repaso_flashcards/: cards.py  cli.py  config.py  deck.py  errors.py  flashcards.py  html.py  outputs.py  row.py
scripts/install_prolog_kernel/: cli.py  config.py  errors.py  kernel_spec.py  models.py  patch_definitions.py  patches.py
units/unit-01-introducci6n-a-la-inteligencia-artificial/: exam_preparation.md  unit-01.md
units/unit-02-busqueda-y-planificaci6n/: exam_preparation.md  unit-02.md
units/unit-03-representaci6n-del-conocimiento-y-razonamiento/: exam_preparation.md  unit-03.md
units/unit-04-ingenieria-del-conocimiento/: exam_preparation.md  unit-04.md
units/unit-05-redes-neuronales/: exam_preparation.md  unit-05.md
units/unit-06-prolog/: practica-01.md  practica-02.md  practica-03.md  practica-04.md  unit-06.md
units/unit-06-prolog/exams/2012-12-20-palabras/: question.md  solution.pl
units/unit-06-prolog/exams/2013-08-29-medicamentos/: question.md
units/unit-06-prolog/exams/2013-11-22-ordenes/: question.md
units/unit-06-prolog/exams/2013-12-05-albumes/: question.md
units/unit-06-prolog/exams/2014-02-13-vacunas/: question.md  solution.pl
units/unit-06-prolog/exams/2014-02-27-empleados/: question.md
units/unit-06-prolog/exams/2014-04-21-peliculas/: question.md  solution.pl
units/unit-06-prolog/exams/2014-07-31-verbos-listas/: question.md
units/unit-06-prolog/exams/2015-04-27-lotes/: question.md
units/unit-06-prolog/exams/2015-08-06-gimnasio/: question.md  solution.pl
units/unit-06-prolog/exams/a/: question.md  (+1 more)
(+87 files in other folders)
