[project]
name = "classic-ai"
version = "0.1.0"
description = "Inteligencia Artificial Clásica"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "anywidget>=0.9",
  "jupyter-book>=2,<3",
  "jupyterlab>=4.5",
  "prolog-kernel>=0.0.9",
  "pydantic>=2.13.4",
  "selectolax>=0.4.10",
  "typer>=0.26.8",
]

[dependency-groups]
dev = [
  "mdformat>=0.7",
  "mdformat-frontmatter>=2.0",
  "poethepoet>=0.37",
  "ruff>=0.15.15",
  "wheel>=0.46.3",
]

[tool.uv]
package = false

[tool.poe.tasks.install-kernels]
cmd = "python -m scripts.install_prolog_kernel"

[tool.poe.tasks.generate-repaso-flashcards]
cmd = "python -m scripts.generate_repaso_flashcards generate"

[tool.poe.tasks.check-repaso-flashcards]
cmd = "python -m scripts.generate_repaso_flashcards check"

[tool.poe.tasks.check-chapter-links-source]
cmd = "python scripts/check_chapter_links.py source"

[tool.poe.tasks.check-chapter-links-html]
cmd = "python scripts/check_chapter_links.py html"

[tool.poe.tasks._build-book]
cwd = "book"
cmd = "jupyter book build --html --execute --execute-parallel 1 --ci"

[tool.poe.tasks.build-book]
sequence = ["generate-repaso-flashcards", "install-kernels", "_build-book"]

[tool.poe.tasks.check-prolog-cells]
sequence = ["install-kernels", "_check-prolog-cells"]

[tool.poe.tasks._check-prolog-cells]
cmd = "python scripts/check_prolog_cells.py"

[tool.poe.tasks.serve-book-preview]
cwd = "book"
cmd = "jupyter book start --port 8000"

[tool.poe.tasks.serve-book]
sequence = ["build-book", "serve-book-preview"]

[tool.poe.tasks.format-md]
cmd = "mdformat --wrap 80 book/chapters README.md LICENSE.md"

[tool.poe.tasks.check-md]
cmd = "mdformat --check --wrap 80 book/chapters README.md LICENSE.md"

[tool.poe.tasks.format-py]
cmd = "ruff format ."

[tool.poe.tasks.lint]
cmd = "ruff check ."

[tool.poe.tasks.format]
sequence = ["format-md", "format-py"]

[tool.poe.tasks.check]
sequence = ["check-md", "lint", "check-repaso-flashcards", "check-chapter-links-source"]

[tool.poe.tasks.build-docker]
help = "Build the Binder Docker image."
cmd = "docker build --no-cache --file .binder/Dockerfile --tag classic-ai:binder ."

[tool.poe.tasks.ci]
sequence = ["check", "check-prolog-cells", "build-book", "check-chapter-links-html"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["book/_build", ".venv"]
